RESOLVED FIXED63259
Warnings in JSC's JIT on 32 bit
https://bugs.webkit.org/show_bug.cgi?id=63259
Summary Warnings in JSC's JIT on 32 bit
Pierre Rossi
Reported 2011-06-23 09:01:53 PDT
preventing from building with -Werror.
Attachments
patch (3.58 KB, patch)
2011-06-23 09:06 PDT, Pierre Rossi
barraclough: review+
webkit.review.bot: commit-queue-
rebased (3.61 KB, patch)
2011-06-23 14:36 PDT, Pierre Rossi
no flags
Pierre Rossi
Comment 1 2011-06-23 09:06:58 PDT
Gavin Barraclough
Comment 2 2011-06-23 13:13:37 PDT
Comment on attachment 98355 [details] patch looks great!
WebKit Review Bot
Comment 3 2011-06-23 13:15:59 PDT
Comment on attachment 98355 [details] patch Rejecting attachment 98355 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=ec2-cq-03', '--port..." exit_code: 2 Last 500 characters of output: atching file Source/JavaScriptCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/JavaScriptCore/jit/JITPropertyAccess32_64.cpp Hunk #1 succeeded at 131 (offset -94 lines). Hunk #2 FAILED at 436. Hunk #3 succeeded at 411 (offset -103 lines). 1 out of 3 hunks FAILED -- saving rejects to file Source/JavaScriptCore/jit/JITPropertyAccess32_64.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Gavin Barraclough', u'..." exit_code: 1 Full output: http://queues.webkit.org/results/8935128
Pierre Rossi
Comment 4 2011-06-23 14:36:41 PDT
Created attachment 98407 [details] rebased oops, that patch was based on qtwebkit-2.2 branch...
WebKit Review Bot
Comment 5 2011-06-28 19:41:59 PDT
Comment on attachment 98407 [details] rebased Clearing flags on attachment: 98407 Committed r89985: <http://trac.webkit.org/changeset/89985>
Ademar Reis
Comment 6 2011-09-05 10:32:02 PDT
(In reply to comment #4) > Created an attachment (id=98407) [details] > rebased > > oops, that patch was based on qtwebkit-2.2 branch... Just out of curiosity: could you please explain how can I reproduce the warning? Using Linux (Fedora 13 32bits) -W -Wall -Werror I can build it without any problems... Maybe my g++ (v4.4.5) is too old?
Pierre Rossi
Comment 7 2011-09-06 05:04:18 PDT
(In reply to comment #6) > (In reply to comment #4) > > Created an attachment (id=98407) [details] [details] > > rebased > > > > oops, that patch was based on qtwebkit-2.2 branch... > > Just out of curiosity: could you please explain how can I reproduce the warning? Using Linux (Fedora 13 32bits) -W -Wall -Werror I can build it without any problems... Maybe my g++ (v4.4.5) is too old? Mhhh, could it be that you're building in debug maybe? As far as I can remember I was getting plain unused variable warnings.
Ademar Reis
Comment 8 2011-09-06 13:08:21 PDT
(In reply to comment #7) > (In reply to comment #6) > > (In reply to comment #4) > > > Created an attachment (id=98407) [details] [details] [details] > > > rebased > > > > > > oops, that patch was based on qtwebkit-2.2 branch... > > > > Just out of curiosity: could you please explain how can I reproduce the warning? Using Linux (Fedora 13 32bits) -W -Wall -Werror I can build it without any problems... Maybe my g++ (v4.4.5) is too old? > > > Mhhh, could it be that you're building in debug maybe? As far as I can remember I was getting plain unused variable warnings. I'm building in release mode, so I guess it's my g++. Anyway, your patch looks good and is simple enough, will cherry-pick it into qtwebkit-2.2
Note You need to log in before you can comment on or make changes to this bug.