2011-06-28  Pierre Rossi  <pierre.rossi@gmail.com>

Reviewed by Eric Seidel.

        Warnings in JSC's JIT on 32 bit
        https://bugs.webkit.org/show_bug.cgi?id=63259

        Fairly straightforward, just use ASSERT_JIT_OFFSET_UNUSED when it applies.

        * jit/JITPropertyAccess32_64.cpp:
        (JSC::JIT::emit_op_method_check):
        (JSC::JIT::compileGetByIdHotPath):
        (JSC::JIT::emit_op_put_by_id):

Canonical link: https://commits.webkit.org/79270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89985 268f45cc-cd09-0410-ab3c-d52691b4dbfc